--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "ts-node main.ts"
+    "start": "ts-node -r tsconfig-paths/register main.ts"
   },
   "keywords": [],
   "author": "",
@@ -14,6 +14,7 @@
     "@types/express": "^4.17.14",
     "@types/node": "^18.11.3",
     "ts-node": "^10.9.1",
+    "tsconfig-paths": "^4.1.0",
     "tslib": "^2.4.0",
     "typescript": "^4.8.4"
   },
