--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,6 +6,9 @@
     "esModuleInterop": true,                             
     "forceConsistentCasingInFileNames": true,            
     "strict": true,                                      
-    "skipLibCheck": true                                 
-  }
+    "skipLibCheck": true,
+    "baseUrl": "./"
+  },
+  "include": ["src/**/*.ts", "./**/*.ts"],
+  "exclude": ["node_modules", "test", "dist"]
 }
