--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "prepare": "husky install",
     "start": "ts-node -r tsconfig-paths/register main.ts",
     "dev": "ts-node-dev -r tsconfig-paths/register main.ts"
