--- a/package.json
+++ b/package.json
@@ -6,8 +6,9 @@
   "scripts": {
     "test": "jest",
     "prepare": "husky install",
-    "start": "ts-node -r tsconfig-paths/register main.ts",
-    "dev": "ts-node-dev -r tsconfig-paths/register main.ts"
+    "build": "tsc --project tsconfig.json && tscpaths -p tsconfig.json -s ./ -o ./dist",
+    "dev": "ts-node-dev -r tsconfig-paths/register main.ts",
+    "start": "node dist/main.js"
   },
   "keywords": [],
   "author": "",
@@ -30,6 +31,7 @@
     "ts-node": "^10.9.1",
     "ts-node-dev": "^2.0.0",
     "tsconfig-paths": "^4.1.0",
+    "tscpaths": "^0.0.9",
     "tslib": "^2.4.0",
     "typescript": "^4.8.4"
   },
