--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,11 @@
     "forceConsistentCasingInFileNames": true,            
     "strict": true,                                      
     "skipLibCheck": true,
-    "baseUrl": "./"
+    "outDir": "dist",
+    "baseUrl": "./",
+    "paths": {
+      "src/*": ["src/*"]
+    }
   },
   "include": ["src/**/*.ts", "./**/*.ts"],
   "exclude": ["node_modules", "test", "dist"]
